fix: update source file extension from .js to .mjs in deployment workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,4 +17,4 @@ jobs:
           aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws_region: sa-east-1
           function_name: arn:aws:lambda:sa-east-1:453710163806:function:n1
-          source: src/index.js
+          source: src/index.mjs
